@@ -1,3 +1,7 @@
+lldpd (0.5.6)
+  * Features:
+    + Parse CDP native VLAN TLV.
+
 lldpd (0.5.5)
   * Features:
     + Support for PPVID and PI Dot1 TLV, thanks to Shuah Khan.
